Revision history for Test-BrewBuild

2.15 UNREL
        - fixed issue in Git::revision() where we weren't actually checking the
          remote commit SHA1 sum correctly
        - all log objects reflect the module short name, not the full module
          path (closes #176)

2.14    2017-04-07
        - added revision() to Git, returns the SHA1 sum for the most recent
          commit, for both local and remotes
        - added _separate_url() to Git. This is currently unused as we're not
          yet using Github's API to fetch commit info
        - added --auto|-a to bbdispatch, spins off an auto run
        - added auto() to Dispatch. Checks git commit revision numbers, and if
          different, we'll do a pull and run the test suite
        - added auto_sleep option to the config file for [Dispatch]. This is how
          long in seconds we sleep in between runs and run checks for --auto
        - added status() in Git, checks whether the current repo is ahead or
          behind in commits compared to remote
        - --auto flag to bbdispatch takes an integer, the number of runs to
          dispatch out. Send in 0 to run forever
        - fully added initial cut of CI automation (via bbdispatch as opposed to
          berrybrew) (closes #172)

2.13    2017-03-28
        - *NOTE* this release has been tested on win7 with berrybrew v1.10, but
          on win10, there may be issues. This is due to an internal library in
          that project that is questionable on win10 (Ionic.Zip). This is being
          investigated, and an update is planned. I wouldn't recommend trusting
          this distribution on Windows 10 at this time for that reason. The
          problem stems from the fact that the portable Strawberry Perl that
          is being installed is not always extracted fully, despite the fact the
          download is ok, and the checksum checks out. Extraction via Explorer
          performs correctly. Again, don't trust on win10