@@ -217,12 +217,12 @@ Dispatcher:
 
     bbdispatch -t 10.1.1.1
 
-Auto run a specific number of dispatch runs to the testers. You *must* be
-located in a repository directory when dispatching:
+Auto run a specific number of dispatch runs to the testers. You *must* specify
+the repository URL on the command line when using auto mode:
 
-    bbdispatch -t 10.1.1.1 -a 10 # run 10 cycles
+    bbdispatch -t 10.1.1.1 -a 10 -r ... # run 10 cycles
 
-    bbdispatch -t 10.1.1.1 -a 0  # run forever
+    bbdispatch -t 10.1.1.1 -a 0  -r ... # run forever
 
 =head1 SEE ALSO
 
